@@ -70,6 +70,7 @@ Improvements:
    `set reference-format = (branch) <tags> remote`. (GH #201)
  - Rename 'branch' view to 'refs' view and show tags. (GH #134)
  - Add completion and history support to the prompt via readline. (GH #185)
+ - Options can be toggled individually for each view. (GH #89)
 
 Bug fixes:
 
